src/objects/Deployment_Comment__c.object
<CustomObject>
    <description>This custom object will be used to capture deployment comments related to the account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deployment Comments</relationshipLabel>
        <relationshipName>Deployment_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deployment_Comments__c</fullName>
        <label>Deployment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Deployment Comment</label>
    <nameField>
        <displayFormat>Comment-{000000}</displayFormat>
        <label>Deployment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>